Battle loops strādā wahoo